correct mathjax display size on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,6 +37,9 @@ header h2 {
 		width: 700px;
 		font-size: 72px;
 	}
+	body {
+		font-size: 15px;
+	}
 	p {
 		font-size: 15px;
 	    margin-bottom: 15px;
@@ -56,6 +59,9 @@ header h2 {
 	header h1 {
 		width: 600px;
 		font-size: 60px;
+	}
+	body {
+		font-size: 14px;
 	}
 	p {
 		font-size: 14px;
@@ -77,6 +83,9 @@ header h2 {
 		font-size: 48px;
 		width: 400px;
 	}
+	body {
+		font-size: 14px;
+	}
 	p {
 		font-size: 12px;
 		margin-bottom: 12px;
@@ -96,6 +105,9 @@ header h2 {
 	header h1 {
 		font-size: 40px;
 		width: 400px;
+	}
+	body {
+		font-size: 10px;
 	}
 	p {
 		font-size: 10px;
